--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
     "lodash": "^4.17.21",
     "next": "13.5.5",
     "react": "^18",
