--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-
+    "parser": "@babel/eslint-parser",
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    }
 }
