--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
