--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ctrl/react-adsense": "^1.7.0",
     "axios": "^1.5.1",
+    "date-fns": "^4.1.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "lodash": "^4.17.21",
